--- a/encryptionInterface/CMakeLists.txt
+++ b/encryptionInterface/CMakeLists.txt
@@ -23,6 +23,7 @@ if(${QT_VERSION_MAJOR} GREATER_EQUAL 6)
     qt_add_executable(encryptionInterface
         MANUAL_FINALIZATION
         ${PROJECT_SOURCES}
+        adfgvx.h adfgvx.cpp
     )
 # Define target properties for Android with Qt 6 as:
 #    set_property(TARGET encryptionInterface APPEND PROPERTY QT_ANDROID_PACKAGE_SOURCE_DIR
